# cohere

./: .gitignore  CLAUDE.md  Cargo.toml  Package.swift  README.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
bindings/python/: Cargo.toml  cohere.pyi
bindings/swift/Cohere/: README.md  build-xcframework.sh
bindings/swift/Cohere/Sources/Cohere/: Cohere.swift
bindings/swift/Cohere/Tests/CohereTests/: CohereTests.swift
bindings/swift/ffi/: Cargo.toml
bindings/swift/ffi/include/: cohere.h  module.modulemap
bindings/swift/ffi/src/: lib.rs
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: json.rs  jsonpath.rs  lib.rs  schema.rs  source_map.rs  toml.rs  validate.rs
crates/python/: Cargo.toml  pyproject.toml
crates/python/src/: lib.rs
crates/wasm/: Cargo.toml  cohere-wasm.d.ts
crates/wasm/src/: lib.rs
examples/: README.md
examples/javascript/: example.js  index.html
examples/python/: main.py
examples/swift/: Package.swift  README.md
examples/swift/Sources/cohere-example/: main.swift
scripts/: set-version.sh
tests/fixtures/invalid/: bad_reference.json  both_errors.json  duplicate_name.json  invalid_type.json  required_missing.json  unreferenced_node.json
tests/fixtures/valid/: combined_validation.json  simple_graph.json  standard_schema.json  x_keywords_only.json
