[package]
name = "cohere-swift"
version = "0.1.0"
edition = "2021"

[lib]
name = "cohere_swift"
# staticlib: linked into the Swift package via an XCFramework.
# rlib: lets the crate be built/tested with the normal cargo toolchain.
crate-type = ["staticlib", "rlib"]

[dependencies]
cohere-core = { path = "../../../crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
